--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,68 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context="com.renan.mobileshop.MainActivity">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:orientation="vertical"
-        android:paddingBottom="2.5dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingTop="2.5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:background="#fff"
-            android:orientation="horizontal"
-            android:padding="10dp">
-
-            <!-- ListRow Left sied Thumbnail image -->
-
-            <LinearLayout
-                android:id="@+id/thumbnail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_marginRight="7dip"
-                android:padding="2dip">
-
-                <ImageView
-                    android:id="@+id/list_image"
-                    android:layout_width="125dp"
-                    android:layout_height="127dp"
-                    android:src="@drawable/img1_small" />
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/product_name1"
-                android:layout_width="182dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignTop="@+id/thumbnail"
-                android:layout_marginEnd="31dp"
-                android:text="Iphone 7 Jet Black 32GB Preto Iphone IOS 4G Wi-fi Câmera 12MP"
-                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
-
-            <TextView
-                android:id="@+id/product_description1"
-                android:layout_width="190dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignStart="@+id/product_name1"
-                android:layout_marginTop="83dp"
-                android:text="R$ 2748,98"
-                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
-                android:textSize="24sp" />
-
-        </RelativeLayout>
-    </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+        android:clipToPadding="false"
+        android:elevation="0dp"
+        android:paddingBottom="80dp" />
+</RelativeLayout>
