--- a/app/src/main/res/layout/activity_product_checkout.xml
+++ b/app/src/main/res/layout/activity_product_checkout.xml
@@ -73,6 +73,8 @@
         android:layout_marginStart="72dp"
         android:layout_marginTop="40dp"
         android:text="Finalizar Compra"
+        android:textColor="#FFFFFF"
+        android:background="@color/colorPrimary"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />
 </android.support.constraint.ConstraintLayout>
