--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -23,7 +24,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginStart="36dp"
         android:layout_marginTop="28dp"
-        android:textAlignment="textStart"
+        android:textAlignment="center"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +36,7 @@
         android:layout_height="39dp"
         android:layout_marginStart="36dp"
         android:layout_marginTop="24dp"
-        android:textAlignment="textStart"
+        android:textAlignment="center"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,9 +49,11 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="33dp"
+        android:background="@color/colorPrimary"
+        android:textColor="#FFFFFF"
         android:text="Comprar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/product_description" />
+        app:layout_constraintTop_toBottomOf="@+id/product_detail_price" />
 
 </android.support.constraint.ConstraintLayout>
