--- a/app/src/main/res/layout/product_list_row.xml
+++ b/app/src/main/res/layout/product_list_row.xml
@@ -41,20 +41,22 @@
 
             <TextView
                 android:id="@+id/product_name"
-                android:layout_width="182dp"
-                android:layout_height="wrap_content"
+                android:layout_width="162dp"
+                android:layout_height="54dp"
                 android:layout_alignParentEnd="true"
-                android:layout_alignTop="@+id/thumbnail"
-                android:layout_marginEnd="31dp"
-                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
+                android:layout_alignParentTop="true"
+                android:layout_marginEnd="17dp"
+                android:layout_marginTop="22dp"
+                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/product_price"
-                android:layout_width="190dp"
+                android:layout_width="168dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignStart="@+id/product_name"
-                android:layout_marginTop="83dp"
+                android:layout_marginTop="95dp"
                 android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                 android:textSize="24sp" />
 
