--- a/app/src/main/res/layout/activity_product_checkout.xml
+++ b/app/src/main/res/layout/activity_product_checkout.xml
@@ -7,11 +7,11 @@
     tools:context=".ProductCheckoutActivity">
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/textInputLayout"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:id="@+id/cardHolder_input"
+        android:layout_width="324dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="28dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -22,13 +22,13 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/textInputLayout2"
-        android:layout_width="368dp"
+        android:id="@+id/cardNumber_input"
+        android:layout_width="324dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
+        app:layout_constraintTop_toBottomOf="@+id/cardHolder_input">
 
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
@@ -37,13 +37,13 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/textInputLayout3"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:id="@+id/expirationDate_input"
+        android:layout_width="325dp"
+        android:layout_height="57dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">
+        app:layout_constraintTop_toBottomOf="@+id/cardNumber_input">
 
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
@@ -52,13 +52,15 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/textInputLayout4"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
+        android:id="@+id/securityNumber_input"
+        android:layout_width="322dp"
+        android:layout_height="59dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">
+        app:layout_constraintTop_toBottomOf="@+id/expirationDate_input">
 
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
@@ -68,13 +70,16 @@
 
     <Button
         android:id="@+id/confirm_order_button"
-        android:layout_width="241dp"
+        android:layout_width="267dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="80dp"
+        android:background="@color/colorPrimary"
         android:text="Finalizar Compra"
         android:textColor="#FFFFFF"
-        android:background="@color/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />
+        app:layout_constraintTop_toBottomOf="@+id/securityNumber_input" />
 </android.support.constraint.ConstraintLayout>
