--- a/app/src/main/res/layout/activity_product_checkout.xml
+++ b/app/src/main/res/layout/activity_product_checkout.xml
@@ -31,6 +31,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cardHolder_input">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/cardNumber_editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Número do Cartão" />
@@ -38,14 +39,15 @@
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/expirationDate_input"
-        android:layout_width="325dp"
-        android:layout_height="57dp"
+        android:layout_width="324dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardNumber_input">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/expirationDate_editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Data de Expiração" />
@@ -53,8 +55,8 @@
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/securityNumber_input"
-        android:layout_width="322dp"
-        android:layout_height="59dp"
+        android:layout_width="324dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,6 +65,7 @@
         app:layout_constraintTop_toBottomOf="@+id/expirationDate_input">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/securityNumber_editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Código de Segurança" />
